# rosalind

./: .gitignore
fib/: fib_problem.py  fib_test.py
hamm/: hamm.py  rosalind_hamm.txt  test_hamm.py
motif/: motif.py
problem_one/: prob_1.py  rosalind_dna.txt  test_prob_1.py
problem_three/: prob_3.py  rosalind_revc.txt  test_prob_3.py
problem_two/: prob_2.py  rosalind_rna.txt  test_prob_2.py
rosalind/: Untitled-1.ipynb
rosalind /: hello.py  pyproject.toml
rosalind /problem_one/: prob_1.py  test_prob_1.py
rosalind /problem_three/: prob_3.py  test_prob_3.py
rosalind /problem_two/: prob_2.py  test_prob_2.py
subs/: test_motif.py
